[package]
name = "rust-cpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.5", features = ["derive"]}
itertools = "0.12.0"
num = "0.4.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

[features]
default = ["local"]
local = []